--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basquiat Arhive</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="/img/art3.jpg" type="image/x-icon">
 </head>
 <body>
     <div id="home" class="background-basquiat">
